syntax = "proto3";

option go_package="proto/user_service";

import "google/api/annotations.proto";

service UserService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/users/get/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/users"
    };
  }
  rpc Register(RegisterRequest) returns(RegisterResponse) {
    option (google.api.http) = {
      post: "/users/register"
      body: "*"
    };
  }
  rpc UpdateUser(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/users/update"
      body: "*"
    };
  }
  rpc DeleteUser(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/users/delete/{id}"
    };
  }
  rpc GetByUsername(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/users/getusername/{id}"
    };
  }


}
message DeleteRequest{
  string id = 1;
}

message DeleteResponse{
  string message = 1;
}

message UpdateRequest{
  string id = 1;
  string UserId = 2;
  User user = 3;
}

message UpdateResponse {
  string message = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  User user = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated User users = 1;
}

message RegisterRequest {
  User user = 1;
}
message RegisterResponse {
  string message = 1;
}

message User {
  string id = 1;
  string Username = 2;
  string Password = 3;
  string Email = 4;
  string Name = 5;
  string LastName = 6;
  string City = 7;
  string Country = 8;
  UserType Role = 9;
  int64 timesCancelled = 10;
}

enum UserType {
  Customer = 0;
  Admin = 1;
}

